[package]
name = "aredis"
version = "0.0.4"
edition = "2021"
description = "ARedis is a Redis client implemented in Rust."
license = "Apache-2.0"
repository = "https://github.com/tisonkun/aredis-rs"
keywords = ["redis", "client", "tokio"]
categories = ["asynchronous", "caching"]

[dependencies]
atoi = "1.0.0"
bytes = "1.1.0"
num = "0.4.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.53"
serial_test = "0.6.0"
time = { version = "0.3.7", features = ["macros"] }
